competences bug on mobile

--- a/style/style.scss
+++ b/style/style.scss
@@ -117,7 +117,7 @@ section{
     justify-content: space-between;
   }
   .competences{
-    width: 30%;
+    width: 28%;
   }
   ul{
     padding-left: 0;
